--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,4 @@ node_js:
   - 0.8
   - 0.10
 before_script:
-  - npm install grunt-cli serve --production --global
-  - nohup serve -p 3001 test/ &
-  - sleep 2
+  - npm install grunt-cli --production --global
