--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "test"
   },
   "scripts": {
-    "test": "grunt test"
+    "test": "grunt test",
+    "postinstall": "bower install"
   },
   "repository": {
     "type": "git",
@@ -29,5 +30,8 @@
     "grunt": "~0.4.1",
     "grunt-contrib-qunit": "~0.2.0",
     "grunt-contrib-copy": "~0.4.0"
+  },
+  "dependencies": {
+    "bower": "~0.8.6"
   }
 }
