--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "input-search",
   "version": "0.1.0",
-  "description": "Input search plugin for jQuery",
+  "description": "This is a tested jQuery HTML5 polyfill for <code>input[type=\"search\"]</code>.\nIts goal is to provide a cross-browser <em>fully-featured <code>input</code> element</em> without extra-markup.",
   "main": "index.js",
   "directories": {
     "test": "test"
